plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'likelion14th'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}


repositories {
	mavenCentral()
}


dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'


	//lombock
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	//db
	runtimeOnly 'com.mysql:mysql-connector-j'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-config'


	//oauth (kakao)
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	//aws
	//implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' #보안이슈로 수정
	implementation platform('software.amazon.awssdk:bom:2.25.60')
	implementation 'software.amazon.awssdk:s3'
	implementation "software.amazon.awssdk:auth"
	implementation "software.amazon.awssdk:sts"

	//이미지 검증 라이브러리
	implementation 'org.apache.tika:tika-core:3.2.2'
	implementation "net.coobird:thumbnailator:0.4.20"
	implementation "com.twelvemonkeys.imageio:imageio-webp:3.10.1"
	implementation "com.twelvemonkeys.imageio:imageio-core:3.10.1"

	//env
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//test
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

}


tasks.named('jar') {
	enabled = false
}
